# c_gl_glfw

./: .gitmodules  CMakeLists.txt  build.sh
.cache/clangd/index/: cocoa_init.m.C2F480340660A843.idx  cocoa_joystick.h.9E1691A0FDCB0911.idx  cocoa_joystick.m.DD9A364C4C1B3033.idx  cocoa_monitor.m.A4FB7E400B14AB25.idx  cocoa_platform.h.88E8A169EFC26FD9.idx  cocoa_time.c.4DE1E7024354CBAC.idx  cocoa_time.h.4089EFFACCDD31E3.idx  cocoa_window.m.A503B060EBAFD74A.idx  context.c.699F134627920B30.idx  egl_context.c.5982084D438BF0F4.idx  glad.c.BD524D4FFEB09894.idx  glad.h.90ED4DE918EBF770.idx  glfw3.h.874092E2BAEF4ED1.idx  init.c.48DACFBC193D07DA.idx  init.c.5E1852CB322DA1C2.idx  init.h.2DBB3FC683E82B47.idx  input.c.6CAE09AA461423DA.idx  internal.h.14E46BCB9FCF1675.idx  khrplatform.h.C75E64EE384F8B15.idx  main.c.D2D9D99CCAE2D259.idx  mappings.h.608F94973B3BABA4.idx  monitor.c.8538D0D1BEAC2555.idx  nsgl_context.m.9A336896C7C5AF86.idx  null_init.c.E34FC5ACD304AEF1.idx  null_joystick.c.23BFC9C69865F81C.idx  null_joystick.h.826365BCF717B3D9.idx  null_monitor.c.9833609B7344E5C4.idx  null_platform.h.88783452B59C6C27.idx  null_window.c.684349824C219FA7.idx  osmesa_context.c.73C6A8890A6A2B09.idx  platform.c.3004FA8AF48AB08A.idx  platform.h.B0FB14632E96D515.idx  posix_module.c.03B8F60186CE6187.idx  posix_thread.c.5254DA1F19AECEAA.idx  posix_thread.h.B984C1BCED733B1F.idx  vulkan.c.28C6758697B09D8E.idx  window.c.5F4EFDE00E4143E1.idx
src/: init.c  init.h  main.c
